# SESP

ueb01/: CMakeLists.txt
ueb01/include/glad/: glad.h
ueb01/include/nuklear/: nuklear_glfw_gl3.h
ueb01/include/stb/: stb_ds.h  stb_image.h
ueb01/res/shader/model/: model.frag  model.vert
ueb01/res/shader/skybox/: skybox.frag
ueb01/src/: camera.c  gui.c  input.c  input.h  mesh.c  mesh.h  model.c  model.h  rendering.c  rendering.h  shader.c  shader.h
ueb02/: CMakeLists.txt
ueb02/include/json/: json.h
ueb02/include/sesp/: stb_ds.h
ueb02/res/model/Sphere/textures/: castle_brick_02_red_spec_1k.dds
ueb02/res/shader/lightVis/: lightVis.frag  lightVis.vert
ueb02/res/shader/model/: model.frag  model.tesc  model.tese  model.vert
ueb02/res/shader/skybox/: skybox.vert
ueb02/res/texture/: castle_brick_02_red_disp_1k.dds
ueb02/src/: common.c  gui.c  input.c  input.h  rendering.c  shader.h  texture.c  window.c
ueb03/: CMakeLists.txt  README.md
ueb03/include/sesp/: stb_image.h
ueb03/res/model/Sphere/: Sphere_Textured.fbx
ueb03/res/model/Sphere/textures/: castle_brick_02_red_nor_1k.dds
ueb03/res/shader/dirLight/: dirLight.frag  dirLight.frag.r46  dirLight.frag.r78  dirLight.vert
ueb03/res/shader/model/: model.frag  model.frag.mine  model.frag.r46  model.frag.r78  model.tesc  model.tese  model.vert
ueb03/res/shader/pointLight/: pointLight.frag  pointLight.vert
ueb03/res/shader/postProcess/: postProcess.vert
ueb03/src/: gbuffer.c  gbuffer.c.mine  gbuffer.c.r46  gbuffer.c.r78  gbuffer.h  gui.c  gui.h  input.c  input.h  light.c  light.h  main.c  material.h  mesh.c  mesh.h  model.c  model.h  rendering.c  rendering.c.mine  rendering.c.r44  rendering.c.r46  scene.c  texture.h  window.c
ueb04/: CMakeLists.txt  README.md
ueb04/include/nuklear/: nuklear.h
ueb04/include/sesp/: json.h  nuklear.h
ueb04/res/model/Sphere/: Sphere.fbx
ueb04/res/model/Sphere/textures/: castle_brick_02_red_diff_1k.dds
ueb04/res/shader/dirLight/: dirLight.frag  dirLight.vert
ueb04/res/shader/dirShadow/: dirShadow.frag  dirShadow.vert
ueb04/res/shader/model/: model.tesc  model.tese  model.vert
ueb04/res/shader/null/: null.frag  null.vert
ueb04/res/shader/pointLight/: pointLight.frag  pointLight.vert
ueb04/res/shader/postProcess/: postProcess.frag
ueb04/res/shader/threshold/: threshold.frag
ueb04/src/: camera.h  common.h  gbuffer.c  gbuffer.h  gui.c  input.c  input.h  light.c  light.h  material.c  rendering.c  scene.c  scene.h  shader.c  utils.c  utils.h  window.h
